@@ -1,0 +1,19 @@
+<?xml version="1.0"?>
+<!-- $Id$-->
+<!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"
+	"http://tapestry.sourceforge.net/dtd/Tapestry_1_0.dtd">
+<specification>
+	<class>com.primix.tapestry.components.InsertText</class>
+	<allow-body>no</allow-body>
+	<parameters>
+		<allow-informal-parameters>no</allow-informal-parameters>
+		<parameter>
+			<name>text</name>
+			<java-type>java.lang.String</java-type>
+		</parameter>
+		<parameter>
+			<name>mode</name>
+			<java-type>com.primix.tapestry.components.InsertTextMode</java-type>
+		</parameter>
+	</parameters>
+</specification>
