@@ -1,3 +1,7 @@
+* Nov 22 2000 hship
+
+Add the InsertText component.
+
 * Nov 20 2000 hship
 
 Release 0.2.6
